# moonlight

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
lewone/: lewone.cpp  lewone.h  lw.cpp  lw.h  myQAxObject.h
log/: log.hpp
pybindmoon/: light.cpp  light.h  log.hpp  monitor.cpp  monitor.h  moonlight.cpp  moonlight.h
scrcpy/: adbprocess.cpp  adbprocess.h  device.cpp  device.h  server.cpp
scrcpy/controller/: action.cpp  action.h  controller.cpp  controller.h  controlmsg.cpp  controlmsg.h  qscrcpyevent.h
scrcpy/decoder/: avframeconvert.cpp  avframeconvert.h  decoder.cpp  decoder.h  stream.cpp  stream.h  videobuffer.cpp  videobuffer.h
thrid_party/spdlog/lib/: spdlog.lib
